--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,22 @@
     <title>Run Smart</title>
   </head>
   <body>
-    <h1>Привет!</h1>
-    <p>Again</p>
+    <section class="promo">
+      <div class="container">
+        <header class="header">
+          <a href="#" class="header__logo"
+            ><img src="img/icons/hero/run-smart-logo.png" alt="logo"
+          /></a>
+          <div class="header__official">
+            Официальный представитель
+            <span>Garmin, Polar, Suunto</span>
+          </div>
+          <div class="header__contacts">
+            <a href="tel:+74999228974">+7 (499) 922-89-74</a>
+            <button class="btn">заказать звонок</button>
+          </div>
+        </header>
+      </div>
+    </section>
   </body>
 </html>
