finish promo and add pros section

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,73 @@
             <button class="btn">заказать звонок</button>
           </div>
         </header>
+        <div class="promo__wrapper">
+          <h1 class="promo__title">Подбор пульсометра</h1>
+          <h2 class="promo__subtitle">с учётом Вашего уровня подготовки</h2>
+          <div class="promo__icons">
+            <div class="promo__icon">
+              <img src="img/icons/hero/timer.png" alt="timer" />Время подбора:
+              10 минут
+            </div>
+            <div class="promo__icon">
+              <img src="img/icons/hero/delivery.png" alt="delivery" />Бесплатная
+              доставка
+            </div>
+            <div class="promo__icon">
+              <img src="img/icons/hero/messages.png" alt="messages" />Ответим
+              <br />
+              на все вопросы
+            </div>
+          </div>
+          <button class="btn btn-main">заказать кОНСУЛЬТАЦИЮ</button>
+          <div class="promo__link">или <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a></div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Section PROS -->
+    <section class="pros">
+      <div class="container">
+        <h2 class="section-title">НАШИ ПРЕИМУЩЕСТВА</h2>
+        <div class="pros__wrapper">
+          <div class="pros__item">
+            <img
+              src="img/icons/advantages/cup.png"
+              alt="cup"
+              class="pros__icon"
+            />
+            <h3 class="pros__title">Делимся опытом</h3>
+            <p class="pros__descr">
+              Наши сотрудники всегда готовы поделиться своим опытом, так как
+              сами бегают полумарафоны, переплыли Босфор, готовятся к
+              соревнованиям по триатлону!
+            </p>
+          </div>
+          <div class="pros__item">
+            <img
+              src="img/icons/advantages/heart.png"
+              alt="heart"
+              class="pros__icon"
+            />
+            <h3 class="pros__title">Заботимся о здоровье</h3>
+            <p class="pros__descr">
+              Мы работаем для того, чтобы Ваши занятия спортом шли на пользу
+              Вашему здоровью и были в радость Вам и Вашим близким!
+            </p>
+          </div>
+          <div class="pros__item">
+            <img
+              src="img/icons/advantages/shoe.png"
+              alt="shoe"
+              class="pros__icon"
+            />
+            <h3 class="pros__title">Учим бегать</h3>
+            <p class="pros__descr">
+              Помогаем с обучением правильной технике бега! Дружим с крупнейшей
+              школой бега в России - <a href="#">I LOVE RUNNING</a>.
+            </p>
+          </div>
+        </div>
       </div>
     </section>
   </body>
