add form and consultation blocks

--- a/src/index.html
+++ b/src/index.html
@@ -94,5 +94,31 @@
         </div>
       </div>
     </section>
+    <!-- section CONSULTATION -->
+    <section class="consultation">
+      <div class="container">
+        <h2 class="section-title section-title-left">
+          Получите бесплатную консультацию <br />
+          по подбору пульсометра
+        </h2>
+        <p class="consultation__descr">
+          Просто заполните форму заявки <br />
+          и мы перезвоним вам в течении 10 минут
+        </p>
+        <form action="#" class="form-feed">
+          <input type="text" placeholder="Ваше имя" name="name" required />
+          <input
+            type="number"
+            placeholder="Ваш телефон"
+            name="phone"
+            required
+          />
+          <input type="email" placeholder="Ваш E-mail" name="email" required />
+          <button type="submit" class="btn btn-submit">
+            заказать кОНСУЛЬТАЦИЮ
+          </button>
+        </form>
+      </div>
+    </section>
   </body>
 </html>
