add slider section

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
     <link rel="stylesheet" href="css/fonts.css" />
+    <link rel="stylesheet" href="css/slick.css" />
     <link rel="stylesheet" href="css/main.min.css" />
     <title>Run Smart</title>
   </head>
@@ -120,5 +121,33 @@
         </form>
       </div>
     </section>
+
+    <!-- sectoin CAROUSEL -->
+    <section class="carousel">
+      <div class="container">
+        <div class="carousel__inner">
+          <div class="carousel__item">
+            <img src="img/slides/slide-1.jpg" alt="slide watch" />
+          </div>
+          <div class="carousel__item">
+            <img src="img/slides/slide-2.jpg" alt="slide watch" />
+          </div>
+          <div class="carousel__item">
+            <img src="img/slides/slide-3.jpg" alt="slide watch" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <script
+      type="text/javascript"
+      src="//code.jquery.com/jquery-1.11.0.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
+    ></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
