--- a/src/index.html
+++ b/src/index.html
@@ -162,19 +162,352 @@
             <div>для триатлона</div>
           </div>
         </div>
+        <div class="catalog__container catalog__container-active">
+          <div class="catalog-item">
+            <div class="catalog-item__wrapper">
+              <div class="catalog-item__body catalog-item__body-active">
+                <img
+                  src="img/tab.png"
+                  alt="sport watch"
+                  class="catalog-item__img"
+                />
+                <div class="catalog-item__title">Пульсометр Polar FT1</div>
+                <div class="catalog-item__descr">
+                  Для первых шагов в тренировках, основанных на сердечном ритме
+                </div>
+                <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+              </div>
+              <ul class="catalog-item__list">
+                <li>
+                  Вы услышите звуковое оповещение о нужном пульсе во время
+                  тренировки;
+                </li>
+                <li>
+                  Вы увидите информативный графический индикатор целевых
+                  тренировочных зон пульса;
+                </li>
+                <li>
+                  Также Вы увидите информацию о расходе калорий за тренировку;
+                </li>
+                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                <a href="#" class="catalog-item__back">НАЗАД</a>
+              </ul>
+            </div>
+            <hr />
+            <footer class="catalog-item__footer">
+              <div class="catalog-item__prices">
+                <div class="catalog-item__old-price">4 750 руб</div>
+                <div class="catalog-item__price">4 500 руб.</div>
+              </div>
+              <button class="btn btn-catalog">КУПИТЬ</button>
+            </footer>
+          </div>
+          <div class="catalog-item">
+            <div class="catalog-item__wrapper">
+              <div class="catalog-item__body catalog-item__body-active">
+                <img
+                  src="img/tab.png"
+                  alt="sport watch"
+                  class="catalog-item__img"
+                />
+                <div class="catalog-item__title">Пульсометр Polar FT1</div>
+                <div class="catalog-item__descr">
+                  Для первых шагов в тренировках, основанных на сердечном ритме
+                </div>
+                <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+              </div>
+              <ul class="catalog-item__list">
+                <li>
+                  Вы услышите звуковое оповещение о нужном пульсе во время
+                  тренировки;
+                </li>
+                <li>
+                  Вы увидите информативный графический индикатор целевых
+                  тренировочных зон пульса;
+                </li>
+                <li>
+                  Также Вы увидите информацию о расходе калорий за тренировку;
+                </li>
+                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                <a href="#" class="catalog-item__back">НАЗАД</a>
+              </ul>
+            </div>
+            <hr />
+            <footer class="catalog-item__footer">
+              <div class="catalog-item__prices">
+                <div class="catalog-item__old-price">4 750 руб</div>
+                <div class="catalog-item__price">4 500 руб.</div>
+              </div>
+              <button class="btn btn-catalog">КУПИТЬ</button>
+            </footer>
+          </div>
+          <div class="catalog-item">
+            <div class="catalog-item__wrapper">
+              <div class="catalog-item__body catalog-item__body-active">
+                <img
+                  src="img/tab.png"
+                  alt="sport watch"
+                  class="catalog-item__img"
+                />
+                <div class="catalog-item__title">Пульсометр Polar FT1</div>
+                <div class="catalog-item__descr">
+                  Для первых шагов в тренировках, основанных на сердечном ритме
+                </div>
+                <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+              </div>
+              <ul class="catalog-item__list">
+                <li>
+                  Вы услышите звуковое оповещение о нужном пульсе во время
+                  тренировки;
+                </li>
+                <li>
+                  Вы увидите информативный графический индикатор целевых
+                  тренировочных зон пульса;
+                </li>
+                <li>
+                  Также Вы увидите информацию о расходе калорий за тренировку;
+                </li>
+                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                <a href="#" class="catalog-item__back">НАЗАД</a>
+              </ul>
+            </div>
+            <hr />
+            <footer class="catalog-item__footer">
+              <div class="catalog-item__prices">
+                <div class="catalog-item__old-price">4 750 руб</div>
+                <div class="catalog-item__price">4 500 руб.</div>
+              </div>
+              <button class="btn btn-catalog">КУПИТЬ</button>
+            </footer>
+          </div>
+          <div class="catalog-item">
+            <div class="catalog-item__wrapper">
+              <div class="catalog-item__body catalog-item__body-active">
+                <img
+                  src="img/tab.png"
+                  alt="sport watch"
+                  class="catalog-item__img"
+                />
+                <div class="catalog-item__title">Пульсометр Polar FT1</div>
+                <div class="catalog-item__descr">
+                  Для первых шагов в тренировках, основанных на сердечном ритме
+                </div>
+                <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+              </div>
+              <ul class="catalog-item__list">
+                <li>
+                  Вы услышите звуковое оповещение о нужном пульсе во время
+                  тренировки;
+                </li>
+                <li>
+                  Вы увидите информативный графический индикатор целевых
+                  тренировочных зон пульса;
+                </li>
+                <li>
+                  Также Вы увидите информацию о расходе калорий за тренировку;
+                </li>
+                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                <a href="#" class="catalog-item__back">НАЗАД</a>
+              </ul>
+            </div>
+            <hr />
+            <footer class="catalog-item__footer">
+              <div class="catalog-item__prices">
+                <div class="catalog-item__old-price">4 750 руб</div>
+                <div class="catalog-item__price">4 500 руб.</div>
+              </div>
+              <button class="btn btn-catalog">КУПИТЬ</button>
+            </footer>
+          </div>
+          <div class="catalog-item">
+            <div class="catalog-item__wrapper">
+              <div class="catalog-item__body catalog-item__body-active">
+                <img
+                  src="img/tab.png"
+                  alt="sport watch"
+                  class="catalog-item__img"
+                />
+                <div class="catalog-item__title">Пульсометр Polar FT1</div>
+                <div class="catalog-item__descr">
+                  Для первых шагов в тренировках, основанных на сердечном ритме
+                </div>
+                <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+              </div>
+              <ul class="catalog-item__list">
+                <li>
+                  Вы услышите звуковое оповещение о нужном пульсе во время
+                  тренировки;
+                </li>
+                <li>
+                  Вы увидите информативный графический индикатор целевых
+                  тренировочных зон пульса;
+                </li>
+                <li>
+                  Также Вы увидите информацию о расходе калорий за тренировку;
+                </li>
+                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                <a href="#" class="catalog-item__back">НАЗАД</a>
+              </ul>
+            </div>
+            <hr />
+            <footer class="catalog-item__footer">
+              <div class="catalog-item__prices">
+                <div class="catalog-item__old-price">4 750 руб</div>
+                <div class="catalog-item__price">4 500 руб.</div>
+              </div>
+              <button class="btn btn-catalog">КУПИТЬ</button>
+            </footer>
+          </div>
+          <div class="catalog-item">
+            <div class="catalog-item__wrapper">
+              <div class="catalog-item__body catalog-item__body-active">
+                <img
+                  src="img/tab.png"
+                  alt="sport watch"
+                  class="catalog-item__img"
+                />
+                <div class="catalog-item__title">Пульсометр Polar FT1</div>
+                <div class="catalog-item__descr">
+                  Для первых шагов в тренировках, основанных на сердечном ритме
+                </div>
+                <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+              </div>
+              <ul class="catalog-item__list">
+                <li>
+                  Вы услышите звуковое оповещение о нужном пульсе во время
+                  тренировки;
+                </li>
+                <li>
+                  Вы увидите информативный графический индикатор целевых
+                  тренировочных зон пульса;
+                </li>
+                <li>
+                  Также Вы увидите информацию о расходе калорий за тренировку;
+                </li>
+                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                <a href="#" class="catalog-item__back">НАЗАД</a>
+              </ul>
+            </div>
+            <hr />
+            <footer class="catalog-item__footer">
+              <div class="catalog-item__prices">
+                <div class="catalog-item__old-price">4 750 руб</div>
+                <div class="catalog-item__price">4 500 руб.</div>
+              </div>
+              <button class="btn btn-catalog">КУПИТЬ</button>
+            </footer>
+          </div>
+        </div>
         <div class="catalog__container">
           <div class="catalog-item">
-            <img
-              src="img/tab.png"
-              alt="sport watch"
-              class="catalog-item__img"
-            />
-            <div class="catalog-item__body">
-              <div class="catalog-item__title">Пульсометр Polar FT1</div>
-              <div class="catalog-item__descr">
-                Для первых шагов в тренировках, основанных на сердечном ритме
+            <div class="catalog-item__wrapper">
+              <div class="catalog-item__body catalog-item__body-active">
+                <img
+                  src="img/tab.png"
+                  alt="sport watch"
+                  class="catalog-item__img"
+                />
+                <div class="catalog-item__title">Пульсометр Polar FT1</div>
+                <div class="catalog-item__descr">
+                  Для первых шагов в тренировках, основанных на сердечном ритме
+                </div>
+                <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
               </div>
-              <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+              <ul class="catalog-item__list">
+                <li>
+                  Вы услышите звуковое оповещение о нужном пульсе во время
+                  тренировки;
+                </li>
+                <li>
+                  Вы увидите информативный графический индикатор целевых
+                  тренировочных зон пульса;
+                </li>
+                <li>
+                  Также Вы увидите информацию о расходе калорий за тренировку;
+                </li>
+                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                <a href="#" class="catalog-item__back">НАЗАД</a>
+              </ul>
+            </div>
+            <hr />
+            <footer class="catalog-item__footer">
+              <div class="catalog-item__prices">
+                <div class="catalog-item__old-price">4 750 руб</div>
+                <div class="catalog-item__price">4 500 руб.</div>
+              </div>
+              <button class="btn btn-catalog">КУПИТЬ</button>
+            </footer>
+          </div>
+          <div class="catalog-item">
+            <div class="catalog-item__wrapper">
+              <div class="catalog-item__body catalog-item__body-active">
+                <img
+                  src="img/tab.png"
+                  alt="sport watch"
+                  class="catalog-item__img"
+                />
+                <div class="catalog-item__title">Пульсометр Polar FT1</div>
+                <div class="catalog-item__descr">
+                  Для первых шагов в тренировках, основанных на сердечном ритме
+                </div>
+                <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+              </div>
+              <ul class="catalog-item__list">
+                <li>
+                  Вы услышите звуковое оповещение о нужном пульсе во время
+                  тренировки;
+                </li>
+                <li>
+                  Вы увидите информативный графический индикатор целевых
+                  тренировочных зон пульса;
+                </li>
+                <li>
+                  Также Вы увидите информацию о расходе калорий за тренировку;
+                </li>
+                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                <a href="#" class="catalog-item__back">НАЗАД</a>
+              </ul>
+            </div>
+            <hr />
+            <footer class="catalog-item__footer">
+              <div class="catalog-item__prices">
+                <div class="catalog-item__old-price">4 750 руб</div>
+                <div class="catalog-item__price">4 500 руб.</div>
+              </div>
+              <button class="btn btn-catalog">КУПИТЬ</button>
+            </footer>
+          </div>
+        </div>
+        <div class="catalog__container">
+          <div class="catalog-item">
+            <div class="catalog-item__wrapper">
+              <div class="catalog-item__body catalog-item__body-active">
+                <img
+                  src="img/tab.png"
+                  alt="sport watch"
+                  class="catalog-item__img"
+                />
+                <div class="catalog-item__title">Пульсометр Polar FT1</div>
+                <div class="catalog-item__descr">
+                  Для первых шагов в тренировках, основанных на сердечном ритме
+                </div>
+                <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+              </div>
+              <ul class="catalog-item__list">
+                <li>
+                  Вы услышите звуковое оповещение о нужном пульсе во время
+                  тренировки;
+                </li>
+                <li>
+                  Вы увидите информативный графический индикатор целевых
+                  тренировочных зон пульса;
+                </li>
+                <li>
+                  Также Вы увидите информацию о расходе калорий за тренировку;
+                </li>
+                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                <a href="#" class="catalog-item__back">НАЗАД</a>
+              </ul>
             </div>
             <hr />
             <footer class="catalog-item__footer">
