--- a/src/index.html
+++ b/src/index.html
@@ -522,6 +522,74 @@
       </div>
     </section>
 
+    <!-- section feedback -->
+    <section class="feedback">
+      <div class="container">
+        <h2 class="section-title">отзывы клиентов</h2>
+        <div class="feedback__container">
+          <div class="feedback-item">
+            <img
+              src="img/feedback/client_1.png"
+              alt="client 1"
+              class="feedback-item__avatar"
+            />
+            <div class="feedback-item__body">
+              <div class="feedback-item__name">Ирина Иванченко</div>
+              <div class="feedback-item__achivments">2 полумарафона</div>
+              <p class="feedback-item__text">
+                Не знала, что себе купить - обратилась к ребятам из RunSmart -
+                подобрали пульсометр, который подошёл именно под мои цели и
+                финансовые возможности. Через некоторое время решила обновить
+                гаджет - не раздумывая обратилась туда же. <br /><br />
+                Новые цели - новый гаджет! <br /><br />
+                Спасибо, RunSmart!
+              </p>
+            </div>
+          </div>
+          <div class="feedback-item">
+            <img
+              src="img/feedback/client_2.png"
+              alt="client 2"
+              class="feedback-item__avatar"
+            />
+            <div class="feedback-item__body">
+              <div class="feedback-item__name">Иван Сёмочкин</div>
+              <div class="feedback-item__achivments">1 полумарафон</div>
+              <p class="feedback-item__text">
+                Крутая штука-пульсометр. Обычно без них бегал. Оказывается
+                только хуже себе делал. <br /><br />Купил пульсометр, ещё в
+                подарок получил тренировку. Со мной вместе провели первую
+                тренировку, научили пользоваться новым гаджетом. Также объяснили
+                основы анатомии, составили план тренировок на месяц вперёд.<br /><br />С
+                ними подготовился к своему первому полумарафону! Спасибо!!!
+              </p>
+            </div>
+          </div>
+          <div class="feedback-item">
+            <img
+              src="img/feedback/client_3.png"
+              alt="client 3"
+              class="feedback-item__avatar"
+            />
+            <div class="feedback-item__body">
+              <div class="feedback-item__name">Юлия Дашкина</div>
+              <div class="feedback-item__achivments">2 полумарафона</div>
+              <p class="feedback-item__text">
+                Долго не могла начать бегать, т.к. до этого несколько раз
+                начинала, но становилось тяжело и я бросала. От друзей услышала
+                о RunSmart и о беге с контролем пульса и решила попробовать.
+                <br /><br />Позвонила, ребята поинтересовались моими целями и
+                подобрали очень интересный вариант со скидкой! Теперь бегаю и
+                наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько
+                более коротких забегов и не намерена останавливаться!
+                <br /><br />Спасибо!!!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="js/tiny-slider.js"></script>
     <script src="js/script.js"></script>
   </body>
