--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
     <link rel="stylesheet" href="css/fonts.css" />
     <link rel="stylesheet" href="css/tiny-slider.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="css/main.min.css" />
     <title>Run Smart</title>
   </head>
@@ -589,6 +596,30 @@
         </div>
       </div>
     </section>
+
+    <footer class="footer">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.396255246403!2d37.646341539635294!3d55.76898946236356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCAxMDcwNzg!5e0!3m2!1sru!2sru!4v1655057608164!5m2!1sru!2sru"
+        width="100%"
+        height="620"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
+      <div class="footer__contacts">
+        <adress class="footer__adress">Москва, Мясницкий проезд, д.3с1</adress>
+        <a href="tel:+74999228974" class="footer__phone">8 (499) 922-89-74</a>
+        <div class="social">
+          <a href="#" class="social__item"><i class="fab fa-facebook-f"></i></a
+          ><a href="#" class="social__item"
+            ><i class="fa-brands fa-instagram"></i></a
+          ><a href="#" class="social__item"
+            ><i class="fa-brands fa-pinterest-p"></i
+          ></a>
+        </div>
+      </div>
+    </footer>
 
     <script src="js/tiny-slider.js"></script>
     <script src="js/script.js"></script>
