add form validation

--- a/src/index.html
+++ b/src/index.html
@@ -117,15 +117,10 @@
           Просто заполните форму заявки <br />
           и мы перезвоним вам в течении 10 минут
         </p>
-        <form action="#" class="form-feed">
-          <input type="text" placeholder="Ваше имя" name="name" required />
-          <input
-            type="number"
-            placeholder="Ваш телефон"
-            name="phone"
-            required
-          />
-          <input type="email" placeholder="Ваш E-mail" name="email" required />
+        <form action="#" class="form-feed" id="consultation-form">
+          <input type="text" placeholder="Ваше имя" name="name" />
+          <input type="number" placeholder="Ваш телефон" name="phone" />
+          <input type="email" placeholder="Ваш E-mail" name="email" />
           <button type="submit" class="btn btn-submit">
             заказать кОНСУЛЬТАЦИЮ
           </button>
@@ -632,15 +627,10 @@
         <div class="modal__subtitle">
           и мы перезвоним вам в течении 10 минут
         </div>
-        <form action="#" class="form-feed">
-          <input type="text" placeholder="Ваше имя" name="name" required />
-          <input
-            type="number"
-            placeholder="Ваш телефон"
-            name="phone"
-            required
-          />
-          <input type="email" placeholder="Ваш E-mail" name="email" required />
+        <form class="form-feed">
+          <input type="text" placeholder="Ваше имя" name="name" />
+          <input type="number" placeholder="Ваш телефон" name="phone" />
+          <input type="email" placeholder="Ваш E-mail" name="email" />
           <button type="submit" class="btn btn-submit">
             заказать кОНСУЛЬТАЦИЮ
           </button>
@@ -651,14 +641,9 @@
         <h2 class="modal__title">Ваш заказ:</h2>
         <div class="modal__subtitle">Пульсометр Polar FT1</div>
         <form action="#" class="form-feed">
-          <input type="text" placeholder="Ваше имя" name="name" required />
-          <input
-            type="number"
-            placeholder="Ваш телефон"
-            name="phone"
-            required
-          />
-          <input type="email" placeholder="Ваш E-mail" name="email" required />
+          <input type="text" placeholder="Ваше имя" name="name" />
+          <input type="number" placeholder="Ваш телефон" name="phone" />
+          <input type="email" placeholder="Ваш E-mail" name="email" />
           <button type="submit" class="btn btn-submit">
             заказать кОНСУЛЬТАЦИЮ
           </button>
@@ -672,7 +657,13 @@
         </div>
       </div>
     </div>
-
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+      integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="js/jquery.validate.min.js"></script>
     <script src="js/tiny-slider.js"></script>
     <script src="js/script.js"></script>
   </body>
