add phone input mask

--- a/src/index.html
+++ b/src/index.html
@@ -119,7 +119,7 @@
         </p>
         <form action="#" class="form-feed" id="consultation-form">
           <input type="text" placeholder="Ваше имя" name="name" />
-          <input type="number" placeholder="Ваш телефон" name="phone" />
+          <input placeholder="Ваш телефон" name="phone" />
           <input type="email" placeholder="Ваш E-mail" name="email" />
           <button type="submit" class="btn btn-submit">
             заказать кОНСУЛЬТАЦИЮ
@@ -629,7 +629,7 @@
         </div>
         <form class="form-feed">
           <input type="text" placeholder="Ваше имя" name="name" />
-          <input type="number" placeholder="Ваш телефон" name="phone" />
+          <input placeholder="Ваш телефон" name="phone" />
           <input type="email" placeholder="Ваш E-mail" name="email" />
           <button type="submit" class="btn btn-submit">
             заказать кОНСУЛЬТАЦИЮ
@@ -642,7 +642,7 @@
         <div class="modal__subtitle">Пульсометр Polar FT1</div>
         <form action="#" class="form-feed">
           <input type="text" placeholder="Ваше имя" name="name" />
-          <input type="number" placeholder="Ваш телефон" name="phone" />
+          <input placeholder="Ваш телефон" name="phone" />
           <input type="email" placeholder="Ваш E-mail" name="email" />
           <button type="submit" class="btn btn-submit">
             заказать кОНСУЛЬТАЦИЮ
@@ -664,6 +664,7 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.maskedinput.min.js"></script>
     <script src="js/tiny-slider.js"></script>
     <script src="js/script.js"></script>
   </body>
