add scroll top btn

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <title>Run Smart</title>
   </head>
   <body>
-    <section class="promo">
+    <section class="promo" id="up">
       <div class="container">
         <header class="header">
           <a href="#" class="header__logo"
@@ -657,6 +657,11 @@
         </div>
       </div>
     </div>
+
+    <a href="#up" class="pageup">
+      <img src="img/icons/circle-chevron-up-solid.svg" alt="up" />
+    </a>
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
       integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
