--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
     <link rel="stylesheet" href="css/fonts.css" />
+    <link rel="stylesheet" href="css/animate.css" />
     <link rel="stylesheet" href="css/tiny-slider.css" />
     <link
       rel="stylesheet"
@@ -83,7 +84,7 @@
             <img
               src="img/icons/advantages/heart.png"
               alt="heart"
-              class="pros__icon"
+              class="pros__icon pros-icon__animation"
             />
             <h3 class="pros__title">Заботимся о здоровье</h3>
             <p class="pros__descr">
@@ -533,7 +534,11 @@
       <div class="container">
         <h2 class="section-title">отзывы клиентов</h2>
         <div class="feedback__container">
-          <div class="feedback-item">
+          <div
+            class="feedback-item animate__animated animate__fadeInUp wow"
+            data-wow-duration="2s"
+            data-wow-delay="0.5s"
+          >
             <img
               src="img/feedback/client_1.png"
               alt="client 1"
@@ -552,7 +557,11 @@
               </p>
             </div>
           </div>
-          <div class="feedback-item">
+          <div
+            class="feedback-item animate__animated animate__fadeInUp wow"
+            data-wow-duration="2s"
+            data-wow-delay="0.5s"
+          >
             <img
               src="img/feedback/client_2.png"
               alt="client 2"
@@ -571,7 +580,11 @@
               </p>
             </div>
           </div>
-          <div class="feedback-item">
+          <div
+            class="feedback-item animate__animated animate__fadeInUp wow"
+            data-wow-duration="2s"
+            data-wow-delay="0.5s"
+          >
             <img
               src="img/feedback/client_3.png"
               alt="client 3"
@@ -670,6 +683,7 @@
     ></script>
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/jquery.maskedinput.min.js"></script>
+    <script src="js/wow.min.js"></script>
     <script src="js/tiny-slider.js"></script>
     <script src="js/script.js"></script>
   </body>
