--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
-    <link rel="stylesheet" href="css/fonts.css" />
-    <link rel="stylesheet" href="css/animate.css" />
-    <link rel="stylesheet" href="css/tiny-slider.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
     <link rel="stylesheet" href="css/main.min.css" />
     <title>Run Smart</title>
   </head>
@@ -639,12 +628,16 @@
         <div class="footer__adress">Москва, Мясницкий проезд, д.3с1</div>
         <a href="tel:+74999228974" class="footer__phone">8 (499) 922-89-74</a>
         <div class="social">
-          <a href="#" class="social__item"><i class="fab fa-facebook-f"></i></a
+          <a href="#" class="social__item"
+            ><img
+              class="social__brand"
+              src="img/brands/facebook-f-brands.svg"
+              alt="facebook" /></a
           ><a href="#" class="social__item"
-            ><i class="fa-brands fa-instagram"></i></a
+            ><img src="img/brands/instagram-brands.svg" alt="instagram" /></a
           ><a href="#" class="social__item"
-            ><i class="fa-brands fa-pinterest-p"></i
-          ></a>
+            ><img src="img/brands/pinterest-p-brands.svg" alt="pinetrest"
+          /></a>
         </div>
       </div>
     </footer>
